--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@
 services:
 
   handler:
-    build: ./handler
+    build: .
     ports:
-      - 8080:8000
+      - 8081:8000
     command: uvicorn main:app --host 0.0.0.0 --reload
     volumes:
       - ./handler:/app
@@ -15,17 +15,17 @@ services:
     depends_on:
       - redis
 
-  # worker:
-  #   build: ./handler
-  #   command: celery worker --app=worker.app --loglevel=info --logfile=logs/celery.log
-  #   volumes:
-  #     - ./project:/usr/src/app
-  #   environment:
-  #     - CELERY_BROKER_URL=redis://redis:6379/0
-  #     - CELERY_RESULT_BACKEND=redis://redis:6379/0
-  #   depends_on:
-  #     - web
-  #     - redis
+  worker:
+    build: .
+    command: celery worker --app=worker.app --loglevel=info --logfile=logs/celery.log
+    volumes:
+      - ./handler:/app
+    environment:
+      - BROKER_URI=redis://redis:6379/0
+      - BACKEND_URI=redis://redis:6379/0
+    depends_on:
+      - handler
+      - redis
 
   redis:
     image: redis:6-alpine
