update docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     environment:
       - BROKER_URI=redis://redis:6379/0
       - BACKEND_URI=redis://redis:6379/0
+      - MODEL_PATH=
     depends_on:
       - handler
       - redis
