--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     volumes:
       - ./handler:/app
     environment:
-      - BROKER_URI=redis://redis:6379/0
-      - BACKEND_URI=redis://redis:6379/0
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
       - redis
 
@@ -21,8 +21,8 @@ services:
     volumes:
       - ./handler:/app
     environment:
-      - BROKER_URI="redis://redis:6379/0"
-      - BACKEND_URI="redis://redis:6379/0"
+      - CELERY_BROKER_URL="redis://redis:6379/0"
+      - CELERY_RESULT_BACKEND="redis://redis:6379/0"
       - MODEL_PATH=""
     depends_on:
       - handler
