--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: '3.8'
 
 services:
 
@@ -21,9 +21,8 @@ services:
     volumes:
       - ./handler:/app
     environment:
-      - CELERY_BROKER_URL="redis://redis:6379/0"
-      - CELERY_RESULT_BACKEND="redis://redis:6379/0"
-      - MODEL_PATH=""
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
       - handler
       - redis
