--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     volumes:
       - ./handler:/app
     environment:
-      - CELERY_BROKER_URL: redis://redis:6379/0
-      - CELERY_RESULT_BACKEND: redis://redis:6379/0
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
       - redis
       - postgres
@@ -22,9 +22,9 @@ services:
     volumes:
       - ./handler:/app
     environment:
-      - CELERY_BROKER_URL: redis://redis:6379/0
-      - CELERY_RESULT_BACKEND: redis://redis:6379/0
-      - SQLALCHEMY_DATABASE_URI: postgresql+psycopg2://admin:password@postgres:5432/results
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://admin:password@postgres:5432/results
     depends_on:
       - handler
       - redis
