--- a/handler/requirements.txt
+++ b/handler/requirements.txt
@@ -4,6 +4,6 @@ flower==0.9.7
 redis==3.5.3
 requests==2.27.1
 uvicorn==0.17.4
-psycopg2==2.8.4
+psycopg2-binary==2.8.6
 SQLAlchemy==1.3.13
 databases==0.4.1
