--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     environment:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
-      - SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://admin:password@postgres:5432/results
+      - SQLALCHEMY_DATABASE_URI=postgresql://admin:password@postgres:5432/results
     depends_on:
       - handler
       - redis
@@ -35,6 +35,13 @@ services:
 
   postgres:
     image: postgres:latest
+    volumes:
+      - ./postgres-data:/var/lib/postgres-data
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: results
+    
 
   # dashboard:
   #   build: ./project
