--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     
 
   dashboard:
-    build: ./project
+    build: ./handler
     command:  flower --app=app.workers.cel_app --port=5555 --broker=redis://redis:6379/0
     ports:
       - 5556:5555
